--- a/Andy/index.html
+++ b/Andy/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ASCII Shift Back by 20</title>
+<title>Andy's File Decoder</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -21,11 +21,11 @@
 </head>
 <body>
 <div class="container">
-    <h1>Shift ASCII Characters Back by 20</h1>
+    <h1>Andy's File Decoder</h1>
     <p>Select a .txt file to process:</p>
     <input type="file" id="fileInput" accept=".txt"><br><br>
     <button id="processButton" disabled>Process File</button>
-    <a id="downloadLink" download="shifted_output.txt">Download Processed File</a>
+    <a id="downloadLink" download="decoded_output.txt">Download Processed File</a>
 </div>
 
 <script>
