--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>File Rename Tracker</h1>
-<p>This tool counts the number of files you rename in a folder. Select the folder you will be working in, then click "View Files" when prompted. This tool only works in Chromium-based browsers (e.g., Chrome). Please use a compatible browser.</p>
+<p>This tool counts the number of files you rename in a folder. Select the folder you will be working in, then click "View Files" when prompted. This tool only works with the Chrome browser.</p>
 
 <button id="select-directory-btn">Select Directory</button>
 <button id="stop-tracking-btn" disabled>Stop Tracking & Download</button>
