--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>File Rename Tracker</h1>
-<p>This tool only works in Chromium-based browsers (e.g., Chrome) that support the File System Access API.</p>
+<p>This tool tracks the number of files that you rename. First, select a folder in your computer. Then, the program will track how many files you rename <b>in that folder.</b> This program only works on Chrome browsers.</p>
 
 <button id="select-directory-btn">Select Directory</button>
 <button id="stop-tracking-btn" disabled>Stop Tracking & Download</button>
