--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>File Rename Tracker (Recursive)</title>
+<title>File Rename Tracker</title>
 </head>
 <body>
 <h1>File Rename Tracker</h1>
-<p>This tool tracks the number of files that you rename. First, select a folder in your computer. Then, the program will track how many files you rename <b>in that folder.</b> This program only works on Chrome browsers.</p>
+<p>This tool tracks the number of files that you rename. First, select a folder in your computer. Then click "View Files" when prompted. Then, the program will track how many files you rename <b>in that folder.</b> This program only works on Chrome browsers.</p>
 
 <button id="select-directory-btn">Select Directory</button>
 <button id="stop-tracking-btn" disabled>Stop Tracking & Download</button>
