--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 <h1>File Rename Tracker</h1>
 <p>This tool tracks the number of files that you rename. First, select a folder in your computer. Then click "View Files" when prompted. Then, the program will track how many files you rename <b>in that folder.</b> This program only works on Chrome browsers.</p>
+<br>
+<p>Here is a YouTube tutorial for the site: https://youtu.be/sZ2jqc_H_O0</p>
 
 <button id="select-directory-btn">Select Directory</button>
 <button id="stop-tracking-btn" disabled>Stop Tracking & Download</button>
